home on mobile tablets fixed

--- a/src/assets/scss/partials/_mixins.scss
+++ b/src/assets/scss/partials/_mixins.scss
@@ -16,3 +16,9 @@
     @content;
   }
 }
+
+@mixin media-min-max-width($breakpointMin, $breakpointMax) {
+  @media screen and (min-width: $breakpointMin) and (max-width: $breakpointMax) {
+    @content;
+  }
+}
